--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>2.5.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
     </dependencies>
 
     <build>
